[package]
name = "crabzilla"
version = "0.1.2"
authors = [
    "Andy Herbert <andy.herbert@gmail.com>",
]
edition = "2021"
license = "MIT"
description = "Provides a JavaScript runtime"
repository = "https://github.com/andyherbert/crabzilla"
keywords = [
    "javascript",
    "ecmascript",
    "scripting",
    "runtime",
]
categories = [
    "compilers",
    "game-development",
    "parser-implementations",
]

[dependencies]
deno_core = "0.112"
futures = "0.3"
import_fn = {version = "0.1", path = "../import_fn"}
